# news-collector

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: install-guide.md  product-alignment.md  rsshub-setup.md  sdk-usage.md  sources.seed.yaml  twikit-setup.md
skills/news-collector/: SKILL.md
skills/newsbox/: SKILL.md
src/news_collector/: __init__.py  cli.py  config.py  db.py  logging_setup.py  models.py  sdk.py  sources.py
src/news_collector/_defaults/: config.default.yaml
src/news_collector/adapters/: base.py  rss_adapter.py  web_adapter.py
src/news_collector/commands/: _helpers.py  clean.py  config.py  docker_helpers.py  doctor.py  fetch.py  logs.py  read.py  restart.py  setup.py  state.py  stats.py  status.py  teardown.py
src/news_collector/commands/sources/: __init__.py  _io.py  _probe.py  add_cmd.py  edit_ops.py  export_cmd.py  list_show.py  probe_cmd.py  test_cmd.py
src/news_collector/data/: __init__.py  docker-compose.yml  sources.seed.yaml
src/news_collector/migrations/: 0001_init.sql
src/news_collector/pipeline/: fetch.py
src/news_collector/utils/: url.py
src/newsbox/: __init__.py  cli.py  config.py  logging_setup.py  models.py  sdk.py  sources.py
src/newsbox/_defaults/: config.default.yaml
src/newsbox/adapters/: __init__.py  _twikit_patches.py  reddit_enrich.py  registry.py  rss_adapter.py  twikit_adapter.py  web_adapter.py
src/newsbox/commands/: __init__.py  _helpers.py  _json.py  clean.py  config.py  docker_helpers.py  doctor.py  fetch.py  logs.py  read.py  restart.py  setup.py  state.py  stats.py  status.py  teardown.py
src/newsbox/commands/sources/: __init__.py  _io.py  _probe.py  add_cmd.py  edit_ops.py  export_cmd.py  list_show.py  probe_cmd.py  test_cmd.py
src/newsbox/data/: docker-compose.yml  sources.seed.yaml
src/newsbox/migrations/: 0002_drop_dead_fields.sql  0003_reddit_comments.sql
src/newsbox/pipeline/: fetch.py
src/newsbox/utils/: atomic.py  throughput.py  time.py
tests/: conftest.py  test_adapters_registry.py  test_clean_cmd.py  test_config.py  test_db.py  test_docker_helpers.py  test_doctor_cmd.py  test_fetch.py  test_fixtures.py  test_json_helper.py  test_logging_setup.py  test_logs_cmd.py  test_read_cmd.py  test_reddit_enrich.py  test_restart_cmd.py  test_rss_adapter.py  test_sdk.py  test_setup_cmd.py  test_sources.py  test_sources_add.py  test_sources_edit_ops.py  test_sources_export.py  test_sources_io.py  test_sources_list_show.py  test_sources_probe.py  test_sources_probe_cmd.py  test_sources_test_cmd.py  test_state_cmd.py  test_stats_cmd.py  test_status_cmd.py  test_teardown_cmd.py  test_throughput.py  test_time.py  test_twikit_adapter.py  test_url.py  test_version.py  test_web_adapter.py  test_web_changelog.py
tests/fixtures/reddit/: r_claudeai_post_with_comments.json  r_claudecode_post_with_comments.json  r_codex_post_with_comments.json  r_localllama_post_with_comments.json
tests/fixtures/rss/: anthropic_blog.xml  simon_atom.xml
tests/fixtures/twikit/: dotey_page1.json  dotey_page2_partial.json  karpathy_article.json
tests/fixtures/web/: anthropic_article_1.html  anthropic_article_2.html  anthropic_article_short.html  anthropic_news_listing.html  jina_article.md  jina_listing.md
tests/fixtures/web/changelog/: chatgpt_release_notes.md  claude_api_release.md  claude_product_release_notes.jina.md  gemini_api_changelog.md  mixed_dates.md
