[project]
name = "newsbox"
version = "1.0.0"
description = "采集层基础服务：上游信源采集 → 落库 → SDK 暴露给下游多领域消费方"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "a809384377", email = "50902490+a809384377@users.noreply.github.com" },
]
keywords = ["news", "rss", "collector", "scraping", "ai-agent", "rsshub", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Database",
    "Topic :: Text Processing",
]
dependencies = [
    "typer>=0.12",
    "loguru>=0.7",
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "ruamel-yaml>=0.19.1",
]

[project.urls]
Homepage = "https://github.com/a809384377/news-collector"
Repository = "https://github.com/a809384377/news-collector"
Issues = "https://github.com/a809384377/news-collector/issues"

[project.scripts]
newsbox = "newsbox.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsbox"]

[tool.hatch.build.targets.wheel.force-include]
"src/newsbox/data/docker-compose.yml" = "newsbox/data/docker-compose.yml"
"src/newsbox/data/sources.seed.yaml" = "newsbox/data/sources.seed.yaml"

# sdist 显式白名单：默认 hatchling 会打入项目根所有 git-tracked 文件，会泄露 ai/（含
# PROJECT.md / ROADMAP.md / KNOWLEDGE 双层 / sprints）、CLAUDE.md 等内部协作工作流文档到 PyPI 公网。
# 改用 explicit include，未来新增内部文件自动排除（零信任）。
[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "uv.lock",
    "docker-compose.yml",
    ".env.example",
    ".python-version",
    ".gitignore",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
